// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TableOfContents Section Entry works with Context API matches snapshot 1`] = `
<div
  id="id"
>
  Section text here
</div>
`;

exports[`TableOfContents Section Entry works without Context API matches snapshot 1`] = `
<Entry
  id="id"
  title="Title"
>
  <div
    id="id"
  >
    Section text here
  </div>
</Entry>
`;
